vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_comptime_call_receiver.vv
import v.embed_file

fn main() {
	$for method in embed_file.EmbedFileData.methods {
		'' == $embed_file(@FILE).$method()
	}
}
